# convGemm

./: .gitignore  CMakeLists.txt  CREDITS.md  Makefile  README.md  blis.h  convGemm.c  convGemm.h  gemm_back_nchw.c  gemm_back_nchw.h  gemm_back_nhwc.c  gemm_back_nhwc.h  gemm_blis.c  gemm_blis.h  gemm_blis_A3B2C0.c  gemm_blis_B3A2C0.c  gemm_blis_B3A2C0_orig.c  gemm_nchw.c  gemm_nchw.h  gemm_nhwc.c  gemm_nhwc.h  im2col_nchw.c  im2col_nchw.h  im2row_nhwc.c  im2row_nhwc.h  quick_gemm.h  test.c  test.h  test.txt  test_back.c  test_gemm.c  test_trans.c
plots/: Makefile  back.plt  back_nchw.plt  convgemm.plt  convgemm_nchw.plt  test.out  test_back.out  test_gemm.pl  test_gemm.plt  test_gemm2.plt  test_gemm_cbuf_big.out  test_gemm_cbuf_big_seq.out  test_gemm_cbuf_small.out  test_trans.out  trans.plt  trans_nchw.plt
plots/nowherman/: Makefile  convgemm.plt  test.out  test_back.out  test_trans.out
slides/: Makefile  slides.tex
src/: CMakeLists.txt  convGemm.c  convGemm.h  gemm_blis.c  gemm_blis.h  gemm_blis_A3B2C0.c  gemm_blis_B3A2C0.c  gemm_blis_B3A2C0_orig.c  im2col_nchw.c  im2col_nchw.h  im2row_nhwc.c  im2row_nhwc.h
tests/: CMakeLists.txt  test.pl  test_back.c  test_base.c  test_base.h  test_trans.c
tests/old/: test_gemm.c
